--- a/app/src/main/res/layout/activity_view_content.xml
+++ b/app/src/main/res/layout/activity_view_content.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        tools:context=".ViewContentActivity"
-        android:padding="16dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ViewContentActivity"
+    android:padding="16dp"
+    android:background="@drawable/background_image"
+    android:gravity="center">
 
-        <ListView
-            android:id="@+id/contentListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+<ListView
+android:id="@+id/contentListView"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:divider="@android:color/white"
+    android:dividerHeight="1dp"
+    android:background="@drawable/rounded_corner_background"
+    android:padding="8dp"
+    android:elevation="8dp" />
     </LinearLayout>
